--- a/.gitignore
+++ b/.gitignore
@@ -134,8 +134,18 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-backend/lib/
-backend/lib64/python3.12/site-packages
-backend/bin
-backend/lib64
-backend/pyvenv.cfg
+lib/
+lib64/python3.12/site-packages
+bin
+lib64
+pyvenv.cfg
+include
+model_train/feature_columns.pkl
+.gitignore
+.gitignore
+model_train/credit_card_transactions.csv
+model_train/fraud_detection_model.pkl
+model_train/label_encoders.pkl
+.gitignore
+backend/feature_columns.pkl
+backend/label_encoders.pkl
